# usbFS

./: .gitignore  CMakeLists.txt  crc.v  digital.csv  ep0_handler.v  ep0_registers.v  jk_decoder.v  packet_decoder.v  packet_encoder.v  setup_buffer.v  usb_bitstuff_in.csv  usb_bus_test.sv  usb_bus_xmit.sv  usb_get_dev_descriptor.csv  usb_in_bad_addr.csv  usb_set_address.csv  usb_setup.csv  usb_setup_in.csv  usb_setup_in_2.csv  usb_setup_in_out.csv  usb_setup_in_out_raw.csv  usb_setup_in_raw.csv  usb_setup_raw.csv  usb_sof.csv  usb_sof_raw.csv  usb_start_36.csv
rtl/: CMakeLists.txt
rtl/src/: dual_port_ram.v  ep0_handler.sv  jk_decoder.sv  jk_encoder.sv  jk_encoder.v  packet_decoder.sv  packet_encoder.sv  setup_buffer.sv  setup_buffer.v  single_port_rom.v  transactionSM.v  transaction_sm.sv  types.sv  usb_packet_test.sv  usbfsTop.v
rtl/test/: CMakeLists.txt  jk_decoder_tester.cpp  jk_encoder_tester.cpp  mod_test.cpp  mod_test.hpp  packet_decoder_tester.cpp  packet_encoder_tester.cpp  transaction_sm_tester.cpp  usb_utils.hpp
rtl/test/bus_captures/: ack_poor_capture.csv  ack_poor_capture.csv.orig  bitstuff_capture.csv  bitstuff_capture_jk.csv  convert_capture_export.sh  setup_txn_capture.csv  setupin_capture.csv  setupin_capture_jk.csv  setupin_capture_jk_raw.csv  sof_capture.csv  sof_capture_jk.csv
